--- a/_po/ja.po
+++ b/_po/ja.po
@@ -10638,7 +10638,9 @@ msgid ""
 "ular old libraries that do not accept binaries as arguments. You can convert a"
 " charlist to a string and back by using the `to_string/1` and `to_charlist/1` "
 "functions:"
-msgstr "文字リストは、主に Erlang インターフェイスの利用における、特にバイナリを引数として受け付けられないライブラリで使われます。"
+msgstr ""
+"実際には、文字リストは特に引数としてバイナリを受け付けない古いErlangライブラリとの、インターフェイスとして使われます。 `to_string/1` や"
+" `to_charlist/1` 関数を使って、文字リストを文字列に変換したり、文字列から文字リストに変換したりできます。"
 
 msgid ""
 "In practice, however, Elixir developers rarely use the `try/rescue` construct."
@@ -13398,7 +13400,7 @@ msgid ""
 msgstr ""
 
 msgid "Similar results can be achieved with the string concatenation operator `<>`:"
-msgstr "文字列の連結演算子を使って、類似する結果をアーカイブできます。"
+msgstr "文字列の連結演算子を使って、類似する結果を得ることができます。"
 
 msgid ""
 "Similar to `IEx.pry/0`, once a breakpoint is reached code execution stops unti"
